src/test/error/access4.lns
class Super {
    pri let val1: int;
    pro let val2: int;
    pub let val3: int;

    pri fn func1() {
    }
    pro fn func2() {
    }
    pub fn func3() {
    }
}

let mut aSuper = new Super();
aSuper.val3 = 0;
aSuper.func3();
aSuper.val2 = 0;
aSuper.func2();
